fix: wrap gap at product cards &  matherial cards

--- a/global-css/theme.css
+++ b/global-css/theme.css
@@ -73,7 +73,7 @@
 .row-wrap {
     display: flex;
     flex-wrap: wrap;
-    gap: var(--size-big-gap);
+    /* gap: var(--size-big-gap); */
 }
 
 .col {
